--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="file_name">File name</string>
     <string name="save_file">Save file</string>
     <string name="enter_file_name">Please enter a file name</string>
+    <string name="no_permissions">Could not save the file without accessing the external storage</string>
 </resources>
