add About section

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,13 @@
     <string name="save_file">Save file</string>
     <string name="enter_file_name">Please enter a file name</string>
     <string name="no_permissions">Could not save the file without accessing the external storage</string>
+
+    <!-- About -->
+    <string name="about">About</string>
+    <string name="website">For more simple apps please visit:\nhttp://simplemobiletools.com</string>
+    <string name="email_label">You can send your feedback and new app suggestions at:</string>
+    <string name="email">hello@simplemobiletools.com</string>
+    <string name="license">License</string>
+    <string name="version">v %1$s</string>
+    <string name="copyright">Copyright © Simple Mobile Tools %1$d</string>
 </resources>
