--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">Simple Draw</string>
+    <string name="save">Save</string>
+    <string name="share">Share</string>
     <string name="share_via">Share via</string>
     <string name="saving_error">Could not save the file</string>
     <string name="saving_ok">Image has been saved successfully</string>
