Added clear canvas functionality
Method "clearCanvas" added to class MyCanvas. It will clear the path list and update the canvas status on screen.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
 
     <!-- Settings -->
     <string name="settings">Settings</string>
+    <string name="clear">Clear</string>
     <string name="dark_theme">Dark theme</string>
 
     <!-- About -->
