some minor pull request edits

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -13,6 +13,7 @@
     <!-- Settings -->
     <string name="settings">Impostazioni</string>
     <string name="dark_theme">Tema scuro</string>
+    <string name="clear">Clear</string>
 
     <!-- About -->
     <string name="about">Informazioni</string>
