Updated source to original master branch and added spanish transtation.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="share">Share</string>
     <string name="share_via">Share via</string>
     <string name="saving_error">Could not save the file</string>
-    <string name="saving_ok">Image has been saved successfully</string>
+    <string name="saving_ok">Image has been saved successfully saved</string>
     <string name="file_name">File name</string>
     <string name="save_file">Save file</string>
     <string name="enter_file_name">Please enter a file name</string>
