rename the launcher to Draw

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Simple Draw</string>
+    <string name="app_launcher_name">Draw</string>
     <string name="save">Save</string>
     <string name="share">Share</string>
     <string name="share_via">Share via</string>
