--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Simple Draw</string>
+    <string name="app_launcher_name">Draw</string>
     <string name="save">Guardar</string>
     <string name="share">Compartir</string>
     <string name="share_via">Compartir via</string>
