--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Simple Draw</string>
+    <string name="app_launcher_name">Draw</string>
     <string name="save">Salva</string>
     <string name="share">Condividi</string>
     <string name="share_via">Condividi via</string>
