--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">シンプル ドロー</string>
+    <string name="app_launcher_name">Draw</string>
     <string name="save">保存</string>
     <string name="share">共有</string>
     <string name="share_via">共有...</string>
