--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Simple Draw</string>
+    <string name="app_launcher_name">Draw</string>
     <string name="save">Spara</string>
     <string name="share">Dela</string>
     <string name="share_via">Dela via</string>
