--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Simple Draw</string>
-    <string name="app_launcher_name">Draw</string>
+    <string name="app_name">Schlichter Zeichenblock</string>
+    <string name="app_launcher_name">Zeichenblock</string>
     <string name="save">Speichern</string>
     <string name="share">Teilen</string>
     <string name="share_via">Teile via</string>
