--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -8,8 +8,8 @@
     <string name="saving_ok">A imagem foi guardada com sucesso</string>
     <string name="file_name">Nome do ficheiro</string>
     <string name="save_file">Guardar ficheiro</string>
-    <string name="enter_file_name">Por favor introduza um nome para o ficheiro</string>
-    <string name="no_permissions">Para guardar o ficheiro é necessário o acesso ao armazenamento externo</string>
+    <string name="enter_file_name">Por favor digite um nome para o ficheiro</string>
+    <string name="no_permissions">Para guardar o ficheiro, é necessário o acesso ao armazenamento externo</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancelar</string>
 
@@ -19,21 +19,26 @@
     <string name="clear">Limpar</string>
 
     <!-- About -->
-    <string name="about">Sobre</string>
+    <string name="about">Acerca</string>
     <string name="website">Mais aplicações simples e código de fonte em:\nhttp://simplemobiletools.com</string>
     <string name="email_label">Envie os seus comentários ou sugestões para:</string>
+	<string name="email" translatable="false">hello@simplemobiletools.com</string>
     <string name="third_party_licences_underlined"><u>Licenças de terceiros</u></string>
     <string name="invite_friends_underlined"><u>Convidar amigos</u></string>
-    <string name="share_text">Olá, experimente %1$s em %2$s</string>
+    <string name="share_text">Olá, experimenta %1$s em %2$s</string>
     <string name="invite_via">Convidar via</string>
-    <string name="rate_us_underlined"><u>Classifique-nos na Play Store</u></string>
+    <string name="rate_us_underlined"><u>Avalie-nos na Play Store</u></string>
     <string name="follow_us">Siga-nos:</string>
-    <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
+    <string name="copyright">V %1$s\nCopyright © Simple Mobile Tools %2$d</string>
 
     <!--License-->
     <string name="notice">Esta aplicação usa as seguintes bibliotecas de terceiros para facilitar a minha vida. Obrigado.</string>
     <string name="third_party_licences">Licenças de terceiros</string>
-    <string name="butterknife_title"><u>Butter Knife (injetor de \"views\")</u></string>
-    <string name="ambilwarna_title"><u>AmbilWarna (selecionador de cores)</u></string>
+    <string name="butterknife_title"><u>Butter Knife (injetor de vistas)</u></string>
+    <string name="butterknife_text" translatable="false">Copyright 2013 Jake Wharton\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS,WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.See the License for the specific language governing permissions and limitations under the License.</string>
+    <string name="butterknife_url" translatable="false">https://github.com/JakeWharton/butterknife</string>
+    <string name="ambilwarna_title"><u>AmbilWarna (seletor de cores)</u></string>
+    <string name="ambilwarna_text" translatable="false">Copyright 2009-2015 Yuku\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
+    <string name="ambilwarna_url" translatable="false">https://github.com/yukuku/ambilwarna</string>
 
 </resources>
