--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="settings">Settings</string>
     <string name="dark_theme">Dark theme</string>
     <string name="clear">Clear</string>
+    <string name="change_background">Change background</string>
 
     <!-- About -->
     <string name="about">About</string>
