--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -17,6 +17,7 @@
     <string name="settings">Impostazioni</string>
     <string name="dark_theme">Tema scuro</string>
     <string name="clear">Clear</string>
+    <string name="change_background">Change background</string>
 
     <!-- About -->
     <string name="about">Informazioni</string>
