--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -17,6 +17,7 @@
     <string name="settings">Inställningar</string>
     <string name="dark_theme">Mörkt tema</string>
     <string name="clear">Clear</string>
+    <string name="change_background">Change background</string>
 
     <!-- About -->
     <string name="about">Om</string>
