--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -17,7 +17,7 @@
     <string name="settings">Definições</string>
     <string name="dark_theme">Tema escuro</string>
     <string name="clear">Limpar</string>
-    <string name="change_background">Change background</string>
+    <string name="change_background">Alterar fundo</string>
 
     <!-- About -->
     <string name="about">Acerca</string>
