--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="app_launcher_name">Draw</string>
     <string name="save">Save</string>
     <string name="share">Share</string>
+    <string name="undo">Undo</string>
+    <string name="color">Change color</string>
     <string name="share_via">Share via</string>
     <string name="saving_error">Could not save the file</string>
     <string name="saving_ok">Image has been saved successfully</string>
