--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <!-- Settings -->
     <string name="settings">Settings</string>
     <string name="dark_theme">Dark theme</string>
+    <string name="brush_size">Show brush size tool</string>
     <string name="clear">Clear</string>
     <string name="change_background">Change background</string>
 
