Added default strings for brush size label

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -16,6 +16,7 @@
     <!-- Settings -->
     <string name="settings">Ajustes</string>
     <string name="dark_theme">Tema oscuro</string>
+    <string name="brush_size">Show brush size tool</string>
     <string name="clear">Limpiar</string>
     <string name="change_background">Cambiar fondo</string>
 
