--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -16,6 +16,7 @@
     <!-- Settings -->
     <string name="settings">Paramètres</string>
     <string name="dark_theme">Thème sombre</string>
+    <string name="brush_size">Show brush size tool</string>
     <string name="clear">Tout effacer</string>
     <string name="change_background">Changer le fond</string>
 
