--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -16,6 +16,7 @@
     <!-- Settings -->
     <string name="settings">Einstellungen</string>
     <string name="dark_theme">Dunkles Design</string>
+    <string name="brush_size">Show brush size tool</string>
     <string name="clear">Leeren</string>
     <string name="change_background">Change background</string>
 
