--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -15,7 +15,7 @@
 
     <!-- Settings -->
     <string name="dark_theme">Tema oscuro</string>
-    <string name="brush_size">Show brush size tool</string>
+    <string name="show_brush_size">Show brush size tool</string>
     <string name="clear">Limpiar</string>
     <string name="change_background">Cambiar fondo</string>
 
