--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -15,7 +15,7 @@
 
     <!-- Settings -->
     <string name="dark_theme">Tema escuro</string>
-    <string name="brush_size">Mostrar ferramenta Tamanho do pincel</string>
+    <string name="show_brush_size">Mostrar ferramenta Tamanho do pincel</string>
     <string name="clear">Limpar</string>
     <string name="change_background">Alterar fundo</string>
 
