--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -1,29 +1,16 @@
 <resources>
     <string name="app_name">Simple Draw</string>
     <string name="app_launcher_name">Draw</string>
-    <string name="save">Spara</string>
-    <string name="share">Dela</string>
-    <string name="share_via">Dela via</string>
-    <string name="saving_error">Det gick inte att spara filen</string>
-    <string name="saving_ok">Bilden har sparats</string>
-    <string name="file_name">Filnamn</string>
-    <string name="save_file">Spara fil</string>
-    <string name="enter_file_name">Ange ett filnamn</string>
-    <string name="no_permissions">Kunde inte spara filen utan tillgång till extern lagringsutrymme</string>
-    <string name="ok">OK</string>
-    <string name="cancel">Cancel</string>
 
     <!-- Settings -->
-    <string name="dark_theme">Mörkt tema</string>
     <string name="show_brush_size">Show brush size tool</string>
     <string name="clear">Clear</string>
-    <string name="change_background">Change background</string>
+    <string name="change_background_color">Change background color</string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <string name="app_short_description">A canvas you can draw on with different colors.</string>
     <string name="app_long_description">
         Want to draw something but you have no paper? This app will suit you perfectly. Just pick a color and draw. You can either save the drawing or share it directly through email or social networks.
-
 
         Contains no ads or unnecessary permissions. It is fully opensource, provides a Dark theme too.
 
