--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Simple Draw</string>
     <string name="app_launcher_name">Draw</string>
+    <string name="open_file">Open file</string>
 
     <!-- Settings -->
     <string name="show_brush_size">Show brush size tool</string>
