--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Simple Draw</string>
     <string name="app_launcher_name">Desenho</string>
-    <string name="open_file">Open file</string>
+    <string name="open_file">Abrir ficheiro</string>
 
     <!-- Settings -->
     <string name="show_brush_size">Mostrar ferramenta Tamanho do pincel</string>
