--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -11,8 +11,7 @@
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <string name="app_short_description">Холст, на котором можно рисовать разными цветами.</string>
     <string name="app_long_description">
-        Хотите что-то нарисовать, но нет бумаги? Это приложение идеально вам подойдет. Просто выбирайте цвет и рисуйте. Вы можете сохранить 
-рисунок, либо сразу отправить его по электронной почте или в социальные сети.
+        Хотите что-то нарисовать, но нет бумаги? Это приложение идеально вам подойдет. Просто выбирайте цвет и рисуйте. Вы можете сохранить рисунок, либо сразу отправить его по электронной почте или в социальные сети.
 
         Без рекламы и излишних прав доступа. Полностью открытое ПО, а также есть тёмная тема интерфейса.
 
