--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Simple Draw</string>
     <string name="app_launcher_name">Desenho</string>
     <string name="open_file">Abrir ficheiro</string>
-    <string name="eraser">Eraser</string>
+    <string name="eraser">Borracha</string>
 
     <!-- Settings -->
     <string name="show_brush_size">Mostrar ferramenta Tamanho do pincel</string>
