catch exceptions thrown at loading bitmap

--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_launcher_name">Simple Draw</string>
     <string name="open_file">Otwórz plik</string>
     <string name="eraser">Gumka</string>
+    <string name="failed_to_load_image">Failed to load image %s</string>
 
     <!-- Settings -->
     <string name="show_brush_size">Pokaż narzędzie rozmiaru pędzla</string>
