--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_launcher_name">Rita</string>
     <string name="open_file">Öppna fil</string>
     <string name="eraser">Radergummi</string>
+    <string name="failed_to_load_image">Failed to load image %s</string>
 
     <!-- Settings -->
     <string name="show_brush_size">Visa penselstorleksverktyg</string>
