--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_launcher_name">Zeichenblock</string>
     <string name="open_file">Open file</string>
     <string name="eraser">Eraser</string>
+    <string name="failed_to_load_image">Failed to load image %s</string>
 
     <!-- Settings -->
     <string name="show_brush_size">Show brush size tool</string>
